# figlet-comment-generator

./: .gitignore  CLAUDE.md  ChangeLog-2024.md  ChangeLog-2025.md  ChangeLog-2026.md  ChangeLog.md  FIGLetAddIn.sln  LICENSE  Marketplace Overview.md  package-lock.json  readme.md  rebase-master.bat
.claude/: settings.local.json
FIGLet.Python/: README.md  pyproject.toml
FIGLet.Python/byteforge_figlet/: __init__.py  __main__.py  fig_font.py  fig_let_renderer.py  layout_mode.py  smushing_rules.py
FIGLet.Python/tests/: test_figfont.py  test_integration.py  test_layout_mode.py  test_performance.py  test_renderer.py  test_smushing_rules.py  test_utilities.py
FIGLet.Python/tests/TestFonts/: mini-fixed.flf
FIGLet.TS/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json
FIGLet.Tests/: FIGFontTests.cs  FIGLet-Test-Battle-Plan.md  FIGLet.Tests.csproj  FIGLetRendererTests.cs  GlobalSuppressions.cs  IntegrationTests.cs  PerformanceTests.cs  SmushingRulesTests.cs  TestUtilities.cs  readme.md
FIGLet.VSCodeExtension/: .vscodeignore  CHANGELOG.md  GettingStarted.html  LICENSE  README.md  ReleaseNotes.html  battle-plan.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
FIGLet.VisualStudioExtension/: CheckExtensionVersion.ps1  CodeContextDetector.cs  CodeElementDetector.cs  CodeElementInfo.cs  DialogHelper.cs  FIGFontInfo.cs  FIGLet.VisualStudioExtension.csproj  FIGLet.VisualStudioExtension.sln  FIGLetCommentCommand.cs  FIGLetCommentPackage.cs  FIGLetFontManager.cs  FIGLetOptions.cs  FIGlet.VisualStudioExtension.csproj  GenerateGUIDs.ps1  (+22 more)
(+107 files in other folders)
