[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byteforge-figlet"
version = "2.0.0"
description = "Python FIGLet rendering library — render text as ASCII art using .flf fonts"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PaulStSmith", email = "paul@byteforge.dev" }]
keywords = ["figlet", "ascii-art", "cli", "fonts", "text-art"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Fonts",
]

[project.urls]
Homepage = "https://github.com/PaulStSmith/FIGLetAddIn"
Repository = "https://github.com/PaulStSmith/FIGLetAddIn"
Issues = "https://github.com/PaulStSmith/FIGLetAddIn/issues"

[project.scripts]
figprint = "byteforge_figlet.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["byteforge_figlet"]

[tool.hatch.build.targets.wheel.force-include]
"byteforge_figlet/fonts" = "byteforge_figlet/fonts"

[tool.hatch.metadata]
allow-direct-references = true
